@startuml
'https://plantuml.com/class-diagram


class Configuration #pink {
    ConfigurationId id
    String type
    ConfigurationDescription description
}

class Customer #pink {
    CustomerId id
    String adCode
    CustomerLevel customerLevel
}



class CustomerCriteriaCondition {
    LocationCondition locationCondition
    WhiteListCondition whiteListCondition
    ABTestingCondition abTestingCondition
}



class WhiteListCondition {
    List<String> whiteList
}

class LocationCondition {
    List<String> adCodes
}

class ABTestingCondition {
    String experimentId
    String bucketKey
}

class CustomerCriteriaConditionMatcher implements Matcher {
}

class WhiteListConditionMatcher implements Matcher {
}

class LocationConditionMatcher  implements Matcher {
}

class ABTestingConditionMatcher  implements Matcher {
}



interface CustomerABAssignments #orange{
    Mono<Assignment> getAssignmentOfExperiment(String ExperimentId, Customer customer)
}

class Assignment {
    String experimentId
    String bucketKey
}

interface CustomerConfigurations #orange{
    FLux<Configuration> flux()
}

interface CustomerCriteriaResults #orange{
    Mono<Boolean> getResult(Configuration configuration, Customer customer);
}

interface Matcher #orange{
    Mono<Boolean> match(Customer customer)
}

Configuration "1" -- "*" CustomerCriteriaResults

Customer "1" -- "*" CustomerCriteriaResults

CustomerCriteriaCondition *- WhiteListCondition
CustomerCriteriaCondition *- LocationCondition
CustomerCriteriaCondition *- ABTestingCondition

Customer  -R- CustomerABAssignments
CustomerABAssignments "1" -- "*" Assignment
ABTestingConditionMatcher o-- CustomerABAssignments

CustomerConfigurations -D- CustomerCriteriaResults

CustomerCriteriaResults o- Matcher

Customer  "1" -- "1" CustomerConfigurations
CustomerConfigurations "1" -- "*" Configuration

CustomerCriteriaConditionMatcher o- WhiteListConditionMatcher
WhiteListConditionMatcher o- WhiteListCondition
CustomerCriteriaConditionMatcher o- ABTestingConditionMatcher
ABTestingConditionMatcher o- ABTestingCondition
CustomerCriteriaConditionMatcher o- LocationConditionMatcher
LocationConditionMatcher o- LocationCondition

Configuration *- ConfigurationDescription
Configuration "1" -- "1" CustomerCriteriaCondition

interface ConfigurationDiffer #orange{
   Mono<DifferResult<T>> diff(String type, String version, Customer customer)
}


class DifferResult #pink{
    String type
    boolean hasUpdate
    boolean useDefault
    List<DifferItem> content
    String version
    DateTime expireTime
}

class DifferItem #pink{
    String id
    String key
    T Data
    T trackingData
    DisplayRule displayRule
    DateTime updatedAt
    long priority
}


class FullDiffer implements ConfigurationDiffer {
    Mono<DifferResult<DifferItem>> diff(String type, String version, Customer customer)
}

class IncrementalDiffer implements ConfigurationDiffer {
    Mono<DifferResult<DifferItem>> diff(String type, String version, Customer customer)
}

DifferResult --o ConfigurationDiffer
DifferResult *- DifferItem

ConfigurationDiffer o-- CustomerConfigurations


@enduml
